@@ -28,15 +28,15 @@
 #define SENSE_ME 1.0
 
 /* */
-#define NOISE_STAND SENSE_ME*1.0
-#define NOISE_WALK SENSE_ME*200.0
-#define NOISE_HIT 600.0
-#define NOISE_GRENADE 6000.0
-#define NOISE_PISTOL 2000.0
-#define NOISE_CANNIBAL 10000.0
+#define NOISE_STAND SENSE_ME*5.0
+#define NOISE_WALK SENSE_ME*40.0
+#define NOISE_HIT 240.0
+#define NOISE_GRENADE 2400.0
+#define NOISE_PISTOL 800.0
+#define NOISE_CANNIBAL 4000.0
 
 /* smell */
-#define SMELL_STRENGTH SENSE_ME*100.0
+#define SMELL_STRENGTH SENSE_ME*800.0
 
 /* sight */
 #define MOB_VIS_RAD VIS_RAD
